[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/HUDs/Status/Status.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/Icons/Life/BarraCheiaMP.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Icons/Life/BarraCheiaHP.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Icons/Life/BackgrondLife_icon.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Icons/Life/Barravazia_Icon.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Icons/Life/MP_Icon.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/Icons/Life/HP.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/Icons/Life/MP.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/Icons/Life/HP_Icon.png" type="Texture" id=9]

[node name="Status" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="background_Life" type="TextureRect" parent="."]
margin_left = 122.0
margin_top = 36.0
margin_right = 459.0
margin_bottom = 64.0
texture = ExtResource( 4 )
expand = true

[node name="background_Enegy" type="TextureRect" parent="."]
margin_left = 122.0
margin_top = 88.0
margin_right = 459.0
margin_bottom = 116.0
texture = ExtResource( 4 )
expand = true

[node name="XP_Bar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 50.0
margin_right = 101.0
margin_bottom = 64.0
percent_visible = false

[node name="TXT_Level" type="Label" parent="XP_Bar"]
margin_left = 50.0
margin_top = 19.0
margin_right = 154.0
margin_bottom = 35.0
text = "Level 01"
align = 1
valign = 1

[node name="Life_Bar" type="TextureProgress" parent="."]
margin_left = 132.0
margin_top = 44.0
margin_right = 446.0
margin_bottom = 56.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="TXT_Life" type="TextureRect" parent="Life_Bar"]
margin_left = -97.0
margin_top = 1.0
margin_right = -71.0
margin_bottom = 18.0
texture = ExtResource( 7 )
expand = true

[node name="img_Life" type="TextureRect" parent="Life_Bar"]
margin_left = -60.0
margin_top = -13.0
margin_right = -20.0
margin_bottom = 27.0
texture = ExtResource( 9 )
expand = true

[node name="Energy_Bar" type="TextureProgress" parent="."]
margin_left = 130.0
margin_top = 96.0
margin_right = 445.0
margin_bottom = 108.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true

[node name="img_Energy" type="TextureRect" parent="Energy_Bar"]
margin_left = -58.0
margin_top = -15.0
margin_right = -18.0
margin_bottom = 25.0
texture = ExtResource( 6 )
expand = true

[node name="TXT_Energy" type="TextureRect" parent="Energy_Bar"]
margin_left = -96.0
margin_right = -66.0
margin_bottom = 17.0
texture = ExtResource( 8 )
expand = true

[connection signal="value_changed" from="XP_Bar" to="." method="_on_XP_Bar_value_changed"]
